fix: fix the overflow problem in music rendering and highlight issue on nav change

--- a/src/index.css
+++ b/src/index.css
@@ -130,8 +130,10 @@ main {
 .main-container .files-render {
   display: flex;
   width: 100%;
+  height: 100%;
   align-items: start;
   flex-direction: column;
+  overflow-y: auto;
 }
 .main-container .files-render div {
   border-bottom: 2px solid var(--bemo-border);
